feature(functions/array-functions): Implemented array functions